
PIG-4570: Allow AvroStorage to use a class for the schema (pmazak via daijy)

PIG-4405: Adding 'map[]' support to mock/Storage (nielsbasjes via daijy)

PIG-4638: Allow TOMAP to accept dynamically sized input (nielsbasjes via daijy)

PIG-4639: Add better parser for Apache HTTPD access log (nielsbasjes via daijy)

BUG FIXES

PIG-5112: Cleanup pig-template.xml (daijy)

PIG-4821: Pig chararray field with special UTF-8 chars as part of tuple join key produces wrong results in Tez (rohini)

PIG-4734: TOMAP schema inferring breaks some scripts in type checking for bincond (daijy)

PIG-4786: CROSS will not work correctly with Grace Parallelism (daijy)

PIG-3227: SearchEngineExtractor does not work for bing (dannyant via daijy)

PIG-4902: Fix UT failures on 0.16 branch: TestTezGraceParallelism, TestPigScriptParser (daijy)

PIG-4909: PigStorage incompatible with commons-cli-1.3 (knoguchi)

PIG-4908: JythonFunction refers to Oozie launcher script absolute path (rohini)

PIG-4905: Input of empty dir does not produce empty output file in Tez (rohini)

PIG-4576: Nightly test HCat_DDL_2 fails with TDE ON (nmaheshwari via daijy)

PIG-4873: InputSplit.getLocations return null and result a NPE in Pig (daijy)

PIG-4895: User UDFs relying on mapreduce.job.maps broken in Tez (rohini)

PIG-4883: MapKeyType of splitter was set wrongly in specific multiquery case (kellyzly via rohini)

PIG-4887: Parameter substitution skipped with glob on register (knoguchi)

PIG-4889: Replacing backslash fails as lexical error (knoguchi)

PIG-4880: Overlapping of parameter substitution names inside&outside a macro fails with NPE (knoguchi)

PIG-4881: TestBuiltin.testUniqueID failing on hadoop-1.x (knoguchi)

PIG-4888: Line number off when reporting syntax error inside a macro (knoguchi)

PIG-3772: Syntax error when casting an inner schema of a bag and line break involved (ssvinarchukhorton via knoguchi)

PIG-4892: removing /tmp/output before UT (daijy)
